--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,12 +1,31 @@
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/gridView"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:columnWidth="120dp"
-    android:numColumns="auto_fit"
-    android:stretchMode="columnWidth"
-    tools:context="com.travelpoker.app.MainActivity">
+    android:layout_height="match_parent"
+    android:id="@+id/pager">
 
-</GridView>
+    <ScrollView
+        android:id="@+id/content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <!-- Dummy content. -->
+        <LinearLayout android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="16dp">
+
+        <TextView android:id="@+id/title"
+            style="@android:style/TextAppearance.Large"
+            android:textStyle="bold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_marginBottom="16dp" />
+
+        </LinearLayout>
+
+    </ScrollView>
+
+</android.support.v4.view.ViewPager>
 
