--- a/app/src/main/res/layout/gallery_fragment.xml
+++ b/app/src/main/res/layout/gallery_fragment.xml
@@ -19,6 +19,11 @@
             android:layout_margin="10dp"
             android:layout_marginBottom="16dp" />
 
+        <ImageView
+            android:id="@+id/item_imageView"
+            android:layout_width="400dp"
+            android:layout_height="400dp"
+            android:scaleType="centerCrop"/>
     </LinearLayout>
  </ScrollView>
 
