--- a/app/src/main/res/layout/gallery_fragment.xml
+++ b/app/src/main/res/layout/gallery_fragment.xml
@@ -8,22 +8,35 @@
     <!-- Dummy content. -->
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/item_imageView"
+            android:layout_width="fill_parent"
+            android:layout_height="350dp"
+            android:scaleType="centerCrop"
+            android:layout_gravity="center"/>
 
         <TextView android:id="@+id/title"
             style="@android:style/TextAppearance.Large"
-            android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_marginBottom="16dp" />
 
-        <ImageView
-            android:id="@+id/item_imageView"
-            android:layout_width="400dp"
-            android:layout_height="400dp"
-            android:scaleType="centerCrop"/>
+        <TextView android:id="@+id/price"
+            style="@android:style/TextAppearance.Large"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_marginBottom="16dp" />
+
+        <TextView android:id="@+id/description"
+            style="@android:style/TextAppearance.Small"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_marginBottom="16dp" />
     </LinearLayout>
  </ScrollView>
 
